HTML file has been updated

--- a/about.html
+++ b/about.html
@@ -21,15 +21,64 @@
             <hr>
         </nav>
         <nav>
-
             <h1>The Junoon </h1>
-
         </nav>
-
-
 
     </header>
 
+    <section>
+        <h2>About</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet sapiente, eius suscipit quasi quaerat, harum
+            odit eligendi, quia a veritatis consequuntur dolore eveniet? Ex perferendis, iste deleniti adipisci
+            molestias nam, dolorum ipsum earum labore quas enim aut odio expedita optio. Fugiat molestias placeat
+            assumenda nam et repellendus corrupti at a libero quam, excepturi beatae cumque minima provident vero
+            ratione facere iusto commodi, sit reprehenderit doloremque atque? Dolor vitae laborum reiciendis obcaecati
+            tempore repudiandae voluptates beatae minus modi, cupiditate ducimus sunt est dolore commodi adipisci
+            recusandae accusantium nesciunt magni architecto voluptatum possimus, quo similique debitis dignissimos!
+            Illo voluptates, dolore magni officia beatae, libero repellat debitis rerum molestiae quam qui saepe? Nisi,
+            dolorem expedita harum, quidem cumque pariatur eum explicabo quam, ex beatae modi doloremque! Veniam tempora
+            obcaecati praesentium consequatur in. Earum temporibus alias eaque aliquid iusto consequuntur amet quas,
+            expedita at asperiores dolores suscipit. Voluptatibus laborum magni natus omnis exercitationem optio dicta
+            ratione debitis, sapiente quae ullam libero? Modi quam at neque pariatur ex similique asperiores in possimus
+            illo sed alias nisi recusandae nostrum sint natus nulla qui temporibus nihil, consectetur consequuntur?
+            Minus accusantium id laborum alias odit. At ut ullam omnis animi totam rerum consequatur optio hic ad sint
+            facilis alias deserunt repellendus, nulla tempore doloremque. Ipsum delectus praesentium placeat iusto
+            optio? Quia reprehenderit exercitationem nam provident fugiat blanditiis deserunt harum?
+        </p>
+        <img src="/Images/about.jpg" alt="The image of junnon gang">
+        <p>
+            Suscipitdistinctio, voluptate veniam vero, in esse aut vel beatae, nesciunt earum magni cupiditate debitis
+            totam
+            eius ratione est recusandae perferendis animi voluptatum quae quibusdam iste adipisci consequatur! Nisi
+            doloremque eos deserunt quisquam quibusdam a aspernatur assumenda similique animi omnis. Nostrum nemo
+            accusantium doloremque veniam voluptas non hic id debitis natus? Fugit dolorum ad sapiente culpa aliquid, et
+            nulla. Ipsam eveniet, est, voluptates aliquid laborum, mollitia ipsa doloribus maiores nulla repudiandae
+            excepturi aut laboriosam dolores esse. Ullam at, sequi ex itaque a rerum beatae voluptatem nemo maxime illo
+            nesciunt officiis delectus minus ducimus libero ipsum! Nobis ipsa neque ipsum alias quae consectetur
+            explicabo repellendus magnam repellat voluptas, praesentium, impedit totam eius animi aliquam, quia dolorem
+            vitae error eos est pariatur? Quis eveniet deleniti minus consequatur velit! Quasi saepe eveniet temporibus
+            perspiciatis aliquid qui repellat veniam, fugiat repudiandae iure necessitatibus cumque sit ducimus dicta,
+            rerum vero nulla aliquam laborum. Facere quaerat ratione odio alias? Magnam dolores esse inventore aut
+            numquam excepturi ipsam cupiditate, ratione quidem, ipsum labore beatae dolore! Maiores, accusamus vitae
+            dolor soluta adipisci deserunt blanditiis inventore perspiciatis fuga recusandae excepturi, nam beatae illum
+            modi facere est ullam tempora. Fuga qui ratione inventore quisquam, voluptatibus vero deleniti ex quis
+            accusamus natus numquam veritatis sunt quam tempora officiis itaque dolore omnis cupiditate nam dolores
+            nisi. Numquam recusandae esse et iste facere eum atque saepe veritatis ut officiis, officia veniam odio
+            nulla vitae quos dignissimos inventore minima aperiam nostrum reiciendis itaque. Aspernatur ducimus harum
+            adipisci sed vero placeat officiis voluptate dolorum dolores! Hic nesciunt quaerat obcaecati, ratione
+            cupiditate magni porro nemo. Fugit voluptatem voluptatum, inventore neque, adipisci et architecto cum
+            tempora corrupti laboriosam, corporis dolore perferendis quia maiores suscipit odit asperiores.
+        </p>
+    </section>
+
+<footer>
+    <h3>The Junoon </h3>
+    <ul>
+        <a href="https://www.facebook.com/Junoontheband" target="_blank"> <li><img src="/Images/facebook img.png" alt="facebook"></li></a>
+        <a href="https://www.youtube.com/channel/UC-cz9jDXT3t4-broFJ1pREw tar" target="_blank">  <li><img src="/Images/youtubr.png" alt="Youtube"></li></a>
+ 
+    </ul>
+</footer>
 
 </body>
 
