Index.html file has been edited her and add one new image

--- a/index.html
+++ b/index.html
@@ -5,11 +5,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home-Page</title>
 </head>
 
 <body>
+    <!-- This is Header-->
+    <header >
 
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>CheckOut</li>
+                <li>Team</li>
+            </ul>
+            <hr>
+        </nav>
+        <nav>
+            <h1>The Junoon </h1>
+        </nav>
+       <a href="https://youtu.be/UtdAxwJb-VU"> <button>Get the Albums here</button></a>
+       <br>
+       <br>
+       <br>
+        <button>&#9658</button>
+    </header>
+
+    <section>
+        <h2> Years of Albums </h2>
+        <div>
+            <div>
+               <strong> jul 16 </strong> 
+               <div> pakistan </div>
+                music
+                views
+            </div>
+
+        </div>
+
+
+    </section>
+
+
+    
+
+<footer>
+    <h3>The Junoon </h3>
+    <ul>
+        <a href="https://www.facebook.com/Junoontheband" target="_blank"> <li><img src="/Images/facebook img.png" alt="facebook"></li></a>
+        <a href="https://www.youtube.com/channel/UC-cz9jDXT3t4-broFJ1pREw tar" target="_blank">  <li><img src="/Images/youtubr.png" alt="Youtube"></li></a>
+ 
+    </ul>
+</footer>
 
 </body>
 
