--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
                 <li>CheckOut</li>
                 <li>Team</li>
             </ul>
-            <hr>
+
         </nav>
+        <hr>
         <nav>
             <h1>The Junoon </h1>
         </nav>
-       <a href="https://youtu.be/UtdAxwJb-VU"> <button>Get the Albums here</button></a>
+       <a href="https://youtu.be/UtdAxwJb-VU" target="_blank"> <button>Get the Albums here</button></a>
        <br>
        <br>
        <br>
